--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>About Us Page </title>
 </head>
 <!--THINGS TO CONTAIN-->
@@ -39,7 +40,7 @@
         </section>
 
         <!-- OUR CORE VALUES -->
-        <section>
+        <section class = "second-section">
             <h1> WE ARE </h1>
             <div class="core-values-container">
                 <div class="box-1">
@@ -52,7 +53,7 @@
                     </div>
                 </div>
 
-                <div class="box-1">
+                <div class="box-2">
                     <div class="content">
                         <img> <!-- ICON -->
                         <h2> Inclusive </h2>
@@ -62,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="box-1">
+                <div class="box-3">
                     <div class="content">
                         <img> <!-- ICON -->
                         <h2> Impactful </h2>
