--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="first-section">
             <div class="container">
                 <div class="even-cols">
-                    <div>
+                    <div class="content-even-cols">
                         <h1 class="primary-title"> About Imperator 5887</h1>
                         <p> Our team not only competes in the First Robotics Competition, 
                             but we also focus on inspiring youger generations to pursue success 
@@ -33,8 +33,8 @@
                             high school students in Tecnologico de Monterrey Campus Puebla. </p>  
                     </div>
                      <!--Sliding Gallery -->
-                    <div>
-                      <img href="/resources/team-photo.jpeg">
+                    <div class="image-even-cols">
+                      <img src="/resources/driver.jpeg">
                     </div>
                 </div>
             </div>
