--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="/style.css" rel="stylesheet">
     <title>About Us Page </title>
 </head>
@@ -184,7 +185,7 @@
                     <div class="card">
                             <div class="content">
                                 <div class="img">
-                                    <img src="/portraits/0A7B0500-C5AE-4A97-80BC-0BEB974B8F88_1_201_a.jpeg" alt="glasgow">
+                                    <img src="/resources/portraits/ramos.jpeg" alt="glasgow">
                                 </div>
                                 <div class="details">
                                     <div class="name">Ricardo Ramos</div>
