container scroll buttons

--- a/index.html
+++ b/index.html
@@ -333,6 +333,12 @@
 
             </div>
 
+            <!--BOTONS DE SCRLOL-->
+        <div class="button">
+            <label for="one-second" class="one active-second"></label>
+            <label for="two-second" class="two-second"></label>
+        </div>
+
     </div>
 </section>
    
