--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
                 <div class="even-cols">
                     <div class="content-even-cols">
                         <h1 class="primary-title"> About Imperator 5887</h1>
+                        <div class="paragraph">
                         <p> Our team not only competes in the First Robotics Competition, 
                             but we also focus on inspiring youger generations to pursue success 
                             in STEAM areas regardless of their age, gender and origin. As a team, 
                             we believe that science is for everyone! Membership is open to all 
                             high school students in Tecnologico de Monterrey Campus Puebla. </p>  
+                        </div>
                     </div>
                      <!--Sliding Gallery -->
                     <div class="image-even-cols">
