--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                                 <img src="/portraits/glasgow.png" alt="glasgow">
                             </div>
                             <div class="details">
-                                <div class="name">Armando MacBeath</div>
-                                <div class="job">Programación</div>
+                                <div class="name">Daniel Arias</div>
+                                <div class="job">Eléctrica & Scouting</div>
                             </div>
                             <div class="media-icons">
                                 <a href="https://github.com/armandomm09"><img src="/portraits/media/github-fill-2.png"></a>
@@ -253,8 +253,8 @@
                                     <img src="/portraits/xuime.jpeg" alt="glasgow">
                                 </div>
                                 <div class="details">
-                                    <div class="name">Ximena Ortiz</div>
-                                    <div class="job">Mecánica</div>
+                                    <div class="name">José Luis Quintana</div>
+                                    <div class="job">Mecánica & diseño</div>
                                 </div>
                                 <div class="media-icons">
                                     <img src="/portraits/media/github-fill-2.png">
@@ -270,8 +270,8 @@
                                     <img src="/portraits/rene.JPG" alt="glasgow">
                                 </div>
                                 <div class="details">
-                                    <div class="name">René Cumplido</div>
-                                    <div class="job">Mecánica</div>
+                                    <div class="name">Leticia Barreto </div>
+                                    <div class="job">Mecánica y Diseño</div>
                                 </div>
                                 <div class="media-icons">
                                     <img src="/portraits/media/github-fill-2.png">
@@ -290,8 +290,8 @@
                                 <img src="/portraits/beto.JPG" alt="glasgow">
                             </div>
                             <div class="details">
-                                <div class="name">Alberto Bucio</div>
-                                <div class="job">Human Player</div>
+                                <div class="name">Emilio Flores</div>
+                                <div class="job">Media</div>
                             </div>
                             <div class="media-icons">
                                 <img src="/portraits/media/github-fill-2.png">
@@ -307,7 +307,7 @@
                                     <img src="/portraits/F2906D87-CC7A-4E1A-B3A4-4CF06BB7B15B_1_105_c.jpeg" alt="glasgow">
                                 </div>
                                 <div class="details">
-                                    <div class="name">Fernanda Vázquez</div>
+                                    <div class="name">Yvette Cisneros</div>
                                     <div class="job">Mecánica</div>
                                 </div>
                                 <div class="media-icons">
@@ -324,8 +324,8 @@
                                     <img src="/portraits/0A7B0500-C5AE-4A97-80BC-0BEB974B8F88_1_201_a.jpeg" alt="glasgow">
                                 </div>
                                 <div class="details">
-                                    <div class="name">Ricardo Ramos</div>
-                                    <div class="job">Programación</div>
+                                    <div class="name">Biniza Vázquez</div>
+                                    <div class="job">Programación & Scouting</div>
                                 </div>
                                 <div class="media-icons">
                                     <img src="/portraits/media/github-fill-2.png">
