--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="card">
                         <div class="content">
                             <div class="img">
-                                <img src="/portraits/glasgow.png" alt="glasgow">
+                                <img src="/resources/portraits/dany.png" alt="glasgow">
                             </div>
                             <div class="details">
                                 <div class="name">Daniel Arias</div>
@@ -250,7 +250,7 @@
                      <div class="card">
                             <div class="content">
                                 <div class="img">
-                                    <img src="/portraits/xuime.jpeg" alt="glasgow">
+                                    <img src="/resources/portraits/pepe.png" alt="glasgow">
                                 </div>
                                 <div class="details">
                                     <div class="name">José Luis Quintana</div>
@@ -267,7 +267,7 @@
                     <div class="card">
                             <div class="content">
                                 <div class="img">
-                                    <img src="/portraits/rene.JPG" alt="glasgow">
+                                    <img src="/resources/portraits/letty.png" alt="glasgow">
                                 </div>
                                 <div class="details">
                                     <div class="name">Leticia Barreto </div>
@@ -304,7 +304,7 @@
                      <div class="card">
                             <div class="content">
                                 <div class="img">
-                                    <img src="/portraits/F2906D87-CC7A-4E1A-B3A4-4CF06BB7B15B_1_105_c.jpeg" alt="glasgow">
+                                    <img src="/resources/portraits/yves.png" alt="glasgow">
                                 </div>
                                 <div class="details">
                                     <div class="name">Yvette Cisneros</div>
@@ -321,7 +321,7 @@
                     <div class="card">
                             <div class="content">
                                 <div class="img">
-                                    <img src="/portraits/0A7B0500-C5AE-4A97-80BC-0BEB974B8F88_1_201_a.jpeg" alt="glasgow">
+                                    <img src="/resources/portraits/macaco.jpeg" alt="glasgow">
                                 </div>
                                 <div class="details">
                                     <div class="name">Biniza Vázquez</div>
