--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 5. Team sliding gallery.
 -->
 <body>
+
+    <header>
+                
+        <nav>    
+            <ul>
+                <li><a href="#about-us-text" alt="about us">About Us</a></li> 
+                <li><a href="#about-first-info" alt="about first">FIRST</a></li> 
+                <li><a href="index.html" alt="logo"></a><img src="/indexResources/5887redLogo.png" id="logo-engrane"/></li>
+                <li><a href="#sponsors" alt="sponsors">Sponsors</a></li>
+                <li><a href="#podcast" alt="podcast">Podcast</a></li>
+            </ul>
+        </nav>    
+
+</header>
     
     <header class="initial-header">
 
