--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 -->
 <body>
 
-    <header id="imp-principal">
+    <header id="imp-principal" >
                 
         <nav>    
             <ul>
-                <li><a href="#about-us-text" alt="about us">About Us</a></li> 
-                <li><a href="#about-first-info" alt="about first">FIRST</a></li> 
-                <li><a href="index.html" alt="logo"></a><img src="/indexResources/5887redLogo.png" id="logo-engrane"/></li>
-                <li><a href="#sponsors" alt="sponsors">Sponsors</a></li>
-                <li><a href="#podcast" alt="podcast">Podcast</a></li>
+                <li><a href="#grid-about-us">About Us</a></li> 
+                <li><a href="#grid-about-us">FIRST</a></li> 
+                <li><a id="logo-a" href="#imp-principal"></a><img src="/indexResources/5887redLogo.png" id="logo-engrane"/></li>
+                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#podcast">Podcast</a></li>
             </ul>
         </nav>    
 
