header pedillos arreglados

--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
             <ul>
                 <li><a href="#grid-about-us">About Us</a></li> 
                 <li><a href="#grid-about-us">FIRST</a></li> 
-                <li><a id="logo-a" href="#imp-principal"></a><img src="/indexResources/5887redLogo.png" id="logo-engrane"/></li>
+                <li><a href="#imp-principal"></a><img src="/resources/5887redLogo.png" id="logo-engrane"/></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#podcast">Podcast</a></li>
             </ul>
         </nav>    
 
-</header>
+   </header>
     
-    <header class="initial-header">
-
-    </header>
+   
 
     
         <section class="first-section">
