--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <p>Send us a message or check out our socials! </p>
     <!-- logos -->
     <div class="contact-us-logos">
-        <nav><img id="mail" src="/indexResources/mail-64.png"></nav>
+        <nav><img id="mail" src="/resources/mail-64.pngs"></nav>
         <nav><i class="fa-brands fa-instagram fa-4x"></i></nav>
         <nav><i class="fa-brands fa-spotify fa-4x"></i></nav>
         <nav><i class="fa-brands fa-github fa-4x"></i></nav>
